# problom-sover

./: .gitignore  README.md  project.md
.github/workflows/: build.yml
.spec/blog/: ai2ai.md
.spec/blog/AI2AI/: 任务列表.md
.spec/blog/Me2AI/: 任务规划.md  技术约束.md  需求描述.md
.spec/text-ai-plugin/Me2AI/: 任务规划.md
text-ai-plugin/: generate-icons.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
text-ai-plugin/.github/workflows/: .build.yml
text-ai-plugin/src/: index.css  main.tsx
text-ai-plugin/src-tauri/: Cargo.toml  tauri.conf.json
text-ai-plugin/src-tauri/capabilities/: default.json
text-ai-plugin/src-tauri/src/: lib.rs  main.rs
text-ai-plugin/src-tauri/src/commands/: app_command.rs  mod.rs  system_command.rs  window_command.rs
text-ai-plugin/src-tauri/src/errors/: app_error.rs
text-ai-plugin/src-tauri/src/models/: agent.rs  mod.rs  settings.rs
text-ai-plugin/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
text-ai-plugin/src-tauri/src/repositories/: history_repo.rs  mod.rs  settings_repo.rs
text-ai-plugin/src-tauri/src/services/: agent_service.rs  mod.rs  settings_service.rs
text-ai-plugin/src-tauri/src/state/: app_state.rs
text-ai-plugin/src-tauri/src/utils/: http.rs  logger.rs  mod.rs  sse.rs
text-ai-plugin/src/components/: FloatBall.tsx  HistoryItem.tsx  ResultPanel.tsx
text-ai-plugin/src/hooks/: useAiStream.ts  useSelectionEvent.ts  useSettings.ts
text-ai-plugin/src/pages/: FloatBallPage.tsx  HistoryPage.tsx  ResultPage.tsx  SettingsPage.tsx
text-ai-plugin/src/services/: aiService.ts  settingsService.ts  windowService.ts
text-ai-plugin/tests/: agent_integration_test.rs  settings_integration_test.rs
(+1 files in other folders)
